Fixed a few spelling issues

--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
                         <hr class="divider my-4" />
                     </div>
                     <div class="col-lg-8 align-self-baseline">
-                        <p class="text-white-75 font-weight-light mb-5">Book a hotel or rent an apartment in the boston neighborhood where you can get access to the nearest public transportation and best resourses!</p>
+                        <p class="text-white-75 font-weight-light mb-5">Book a hotel or rent an apartment in one of Boston neighborhoods where you can get access to the nearest public transportation, and best resources!</p>
                         <a class="btn btn-primary btn-xl js-scroll-trigger" href="#about">Find Out More</a>
                     </div>
                 </div>
